Bug 359082 - Empty dialog on clicking 'GnuPG Settings...' dialog
Summary: Empty dialog on clicking 'GnuPG Settings...' dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-06 23:24 UTC by André Marcelo Alvarenga
Modified: 2016-02-07 14:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Screenshot (46.30 KB, image/png)
2016-02-06 23:25 UTC, André Marcelo Alvarenga
Details
New screenshot (53.53 KB, image/png)
2016-02-07 12:58 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-02-06 23:24:50 UTC
See screenshot.

Settings -> Configure KMail...
Security page -> Miscellaneous tab

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2016-02-06 23:25:16 UTC
Created attachment 97063 [details]
Screenshot
Comment 2 Laurent Montel 2016-02-07 06:29:52 UTC
   QPointer<KCMultiDialog> dlg(new KCMultiDialog(this));
    dlg->addModule(QStringLiteral("kleopatra_config_gnupgsystem"));
    dlg->exec();
    delete dlg;

So for me you install is not correct.
Please verify that your distro install it and all gnupg is installed too
Comment 3 André Marcelo Alvarenga 2016-02-07 12:58:34 UTC
Created attachment 97065 [details]
New screenshot

Hi Laurent.

I have installed Kleopatra and works now.
KMail could show a message to user install Kleopatra instead show a empty dialog, like in Identity settings. (see new screenshot)
This is easy to fix by user, if he has the correct information.

Thanks for reply and for your work on KDEPIM software.
Comment 4 Laurent Montel 2016-02-07 14:11:27 UTC
Indeed you write.
I will look at how to implement it.
I reopen it.
Comment 5 Laurent Montel 2016-02-07 14:54:43 UTC
Git commit e609409c2f139a77e5fb9ceed9788d493a93ea21 by Montel Laurent.
Committed on 07/02/2016 at 14:54.
Pushed by mlaurent into branch 'master'.

Fix Bug 359082 - Empty dialog on clicking 'GnuPG Settings...' dialog

FIXED-IN: 5.2

M  +9    -1    kmail/configuredialog/configuresecuritypage.cpp

http://commits.kde.org/kdepim/e609409c2f139a77e5fb9ceed9788d493a93ea21