Fix Bug 359082 - Empty dialog on clicking 'GnuPG Settings...' dialog

FIXED-IN: 5.2
BUG: 359082